<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/account_edit_img_profile"
            android:padding="8dp"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/pink_logo"
            android:text="@string/account_edit_bnt_select_image"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPresentationName"
            android:labelFor="@+id/editPresentationName"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="12dp"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:background="@drawable/edit_text_border"
            android:hint="@string/account_edit_txt_showname"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400" />

        <EditText
            android:id="@+id/editBiography"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:gravity="start|top"
            android:ems="10"
            android:paddingVertical="20dp"
            android:inputType="textMultiLine"
            android:autofillHints="name"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/account_edit_txt_bio"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/editInterests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="54dp"
            app:flexWrap="wrap"
            app:justifyContent="center"
            android:paddingVertical="8dp"
            android:paddingHorizontal="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_border">

            <TextView
                android:id="@+id/labelFlexboxInteresses"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/account_edit_txt_interests"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:textColor="@android:color/darker_gray" />
        </com.google.android.flexbox.FlexboxLayout>

        <Spinner
            android:id="@+id/editLookingFor"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edit_text_border"
            android:entries="@array/sexual_orientation_options"
            android:padding="16dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="@color/material_dynamic_primary70"
            android:text="@string/account_edit_bnt_save"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
