<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.Sugarboat"
    tools:context=".view.RegisterActivity">

    <ImageView
        android:id="@+id/imgLogoSignIn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosb1" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoSignIn">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutRegisterEmail"
            style="@style/textInputEditTextLogin"
            android:gravity="center"
            app:hintEnabled="false"
            app:startIconContentDescription="@string/activity_login_txtInput_username"
            app:startIconDrawable="@drawable/baseline_account_circle_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_login_txtInput_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutRegisterPassword"
            style="@style/textInputEditTextLogin"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:hintEnabled="false"
            app:startIconContentDescription="@string/activity_login_txtInput_username"
            app:startIconDrawable="@drawable/baseline_rounded_lock_open_right_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/activity_login_txtInput_password"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutRegisterConfirmPassword"
            style="@style/textInputEditTextLogin"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:hintEnabled="false"
            app:startIconContentDescription="@string/activity_login_txtInput_username"
            app:startIconDrawable="@drawable/baseline_rounded_lock_open_right_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/activity_register_txtInput_confirm_password"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterSignup"
            style="@style/materialButtonDefault"
            android:layout_marginVertical="8dp"
            android:text="@string/activity_register_btn_register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtRegisterSignIn"
            style="@style/materialTextViewLogin"
            android:text="@string/activity_register_txtView_login" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>